crates/opi-tui/tests/snapshots/image_view_snapshots__message_list_image_no_dims_80x10.snap
---
source: crates/opi-tui/tests/image_view_snapshots.rs
assertion_line: 183
expression: "render(widget, 80, 10)"
---
┌ Messages ────────────────────────────────────────────────────────────────────┐
│Tool: [Image: GIF]                                                            │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
