crates/opi-tui/tests/snapshots/image_view_snapshots__message_list_with_fallback_image_120x40.snap
---
source: crates/opi-tui/tests/image_view_snapshots.rs
assertion_line: 113
expression: "render(widget, 120, 40)"
---
┌ Messages ────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│You: Show me the dashboard                                                                                            │
│Tool: [Image: 1920x1080 JPEG]                                                                                         │
│Asst: Here is the dashboard view.                                                                                     │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
