crates/opi-tui/tests/snapshots/image_view_snapshots__message_list_with_fallback_image_80x24.snap
---
source: crates/opi-tui/tests/image_view_snapshots.rs
assertion_line: 88
expression: "render(widget, 80, 24)"
---
┌ Messages ────────────────────────────────────────────────────────────────────┐
│You: Take a screenshot                                                        │
│Tool: [Image: 800x600 PNG]                                                    │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
