crates/opi-tui/tests/snapshots/image_view_snapshots__message_list_with_kitty_image_80x24.snap
---
source: crates/opi-tui/tests/image_view_snapshots.rs
assertion_line: 135
expression: "render(widget, 80, 24)"
---
┌ Messages ────────────────────────────────────────────────────────────────────┐
│Tool: [Image: 640x480 PNG]                                                    │
│_Ga=T,f=100;iVBORw==\                                                         │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
